--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@mui/material": "^5.3.0",
     "@mui/styles": "^5.3.0",
     "axios": "^0.21.4",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "cogo-toast": "^4.2.3",
-    "framer-motion": "^6.2.1",
+    "framer-motion": "^6.2.4",
+    "ka-table": "^7.3.0",
     "nprogress": "^0.2.0",
     "print-js": "^1.6.0",
     "react": "^17.0.2",
@@ -28,7 +29,7 @@
     "tinycolor2": "^1.4.2"
   },
   "scripts": {
-    "start": "set PORT=3010 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
